force-app/main/default/objects/Account/fields/Typeofproduction__c.field-meta.xml
<CustomField>
    <fullName>Typeofproduction__c</fullName>
    <label>Type of production</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drawing mill</fullName>
            </value>
            <value>
                <fullName>Forge</fullName>
            </value>
            <value>
                <fullName>Spring manufacturer</fullName>
            </value>
            <value>
                <fullName>Spring manufacturer, stabilizer producers</fullName>
            </value>
            <value>
                <fullName>Wire tempering</fullName>
            </value>
            <value>
                <fullName>Spring manufacturers (brake accumulator springs)</fullName>
            </value>
            <value>
                <fullName>Railroad infrastructure manufacturer</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Bearing steel manufacturer</fullName>
            </value>
            <value>
                <fullName>Forge/ Bearing steel manufacturer</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Forge/ Hogger</fullName>
            </value>
            <value>
                <fullName>Tool manufacturer</fullName>
            </value>
            <value>
                <fullName>Armature manufacturer</fullName>
            </value>
            <value>
                <fullName>Bearing steel manufacturer/ sawing company</fullName>
            </value>
            <value>
                <fullName>Mechanical engineering company</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>Hogger</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Bright steel manufacturer</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Rolling mill</fullName>
            </value>
            <value>
                <fullName>Rolling mill for wire rod</fullName>
            </value>
            <value>
                <fullName>Press shop</fullName>
            </value>
            <value>
                <fullName>Pre-material manufacturer for linear guides</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Tire wire manufacturer</fullName>
            </value>
            <value>
                <fullName>Drawing shop for reinforcing steel</fullName>
            </value>
            <value>
                <fullName>Welding wire customer</fullName>
            </value>
            <value>
                <fullName>Cold rolling mill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>