force-app/main/default/objects/Account/fields/Validsince__c.field-meta.xml
<CustomField>
    <fullName>Validsince__c</fullName>
    <label>Valid since</label>
    <type>Date</type>
</CustomField>