force-app/main/default/objects/Account/fields/Validuntil__c.field-meta.xml
<CustomField>
    <fullName>Validuntil__c</fullName>
    <label>Valid until</label>
    <type>Date</type>
</CustomField>