force-app/main/default/objects/Account/validationRules/Account_Activation_Future_valid_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Activation_Future_valid_date</fullName>
    <active>true</active>
    <errorConditionFormula>Inactive__c  = false &amp;&amp;  (Validuntil__c  &lt;=  TODAY() ) &amp;&amp; NOT($Setup.ByPassLogic__c.ByPassValidation__c)</errorConditionFormula>
    <errorMessage>As the &quot;Valid until&quot; date is in the past, the account cannot be activated.</errorMessage>
</ValidationRule>