force-app/main/default/objects/Account/validationRules/CheckSumofQuantityShareFieldsToBe100.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckSumofQuantityShareFieldsToBe100</fullName>
    <active>true</active>
    <errorConditionFormula>(nullvalue( Quantitysharefixed__c ,0)+nullvalue( Quantityshareflexible__c,0)+nullvalue( Quantitysharerepeating__c ,0)&lt;&gt;1)
&amp;&amp;
(NOT(ISBLANK( Quantitysharefixed__c)) || NOT(ISBLANK(Quantityshareflexible__c)) || NOT(ISBLANK(Quantitysharerepeating__c)))</errorConditionFormula>
    <errorMessage>The values of &apos;Quantity share fixed&apos;, &apos;Quantity share repeating&apos; and &apos; Quantity share flexible&apos; have to add up to 100%.</errorMessage>
</ValidationRule>