force-app/main/default/objects/Account/validationRules/ConvertPotentialCusInfluencerToCustomer.validationRule-meta.xml
<ValidationRule>
    <fullName>ConvertPotentialCusInfluencerToCustomer</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
  OR(
        $Profile.Name = &quot;Systemadministrator&quot;,
        $Profile.Name = &quot;System Administrator&quot;,
        $Profile.Name = &quot;Salesforce API Only System Integrations&quot;,
        $Profile.Name = &quot;DH Customer Administration&quot;
    )
     , FALSE ,
   AND(
    ISCHANGED(Type),
    ISPICKVAL(Type, &quot;Customer&quot;),
   OR( ISPICKVAL(PRIORVALUE(Type), &quot;Potential Customer&quot;),
       ISPICKVAL(PRIORVALUE(Type), &quot;Influencer&quot;)))
)</errorConditionFormula>
    <errorMessage>You are not authorised to record an account with the account type &apos;customer&apos; in the system. Please contact the Customer Administration.</errorMessage>
</ValidationRule>