force-app/main/default/objects/Account/validationRules/PhoneNumberBeginWithPlus.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumberBeginWithPlus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        ISBLANK(SAPAccountNumber__c),
NOT( ISBLANK( Phone ) ),
NOT(REGEX(Phone , &quot;^\\+[1-9][0-9]{7,14}$&quot;)),
NOT($Setup.ByPassLogic__c.ByPassValidation__c))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please insert a phone number in the format &quot;+49123456789&quot;.</errorMessage>
</ValidationRule>