force-app/main/default/objects/Account/validationRules/ValidationOnCustomerAccountType.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnCustomerAccountType</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Type , &quot;Customer&quot;), OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;DH Sales Profile&quot;),NOT( OR(ISCHANGED(Phone),  ISCHANGED( Website) )) )</errorConditionFormula>
    <errorMessage>You are not authorized to edit this field for this Account Type. Please contact the Customer Administration.</errorMessage>
</ValidationRule>