force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Segment1__c</columns>
    <columns>Segment2__c</columns>
    <columns>Segment3__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>Agency__c</columns>
    <filterScope>Team</filterScope>
    <label>My Accounts</label>
    <sharedTo>
        <role>SAG</role>
    </sharedTo>
</ListView>