force-app/main/default/objects/Account/listViews/Risk_Management.listView-meta.xml
<ListView>
    <fullName>Risk_Management</fullName>
    <columns>CreditAccount__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>SAPAccountNumber__c</columns>
    <columns>PaymentTerm__c</columns>
    <columns>AverageOverdue__c</columns>
    <columns>ExternalLimit__c</columns>
    <columns>InternalLimit__c</columns>
    <columns>ReceivableCurrent__c</columns>
    <columns>CurrentShortfall__c</columns>
    <columns>TotalOverdue__c</columns>
    <columns>DunningLevel__c</columns>
    <columns>CommentOverdueInvoice__c</columns>
    <columns>AdditionalCommentOverdueInvoice__c</columns>
    <columns>CommentOverdraft__c</columns>
    <columns>AdditionalCommentOverdraft__c</columns>
    <filterScope>Everything</filterScope>
    <label>Risk Management</label>
</ListView>